--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -9,33 +9,71 @@
         android:gravity="bottom" android:id="@+id/linearLayout">
 
     <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/userImageNavHeader"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginLeft="12dp"
             android:paddingTop="@dimen/nav_header_vertical_spacing"
-            android:contentDescription="@string/nav_header_desc"
-            android:id="@+id/imageView" app:srcCompat="@drawable/profiledefault"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="2dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="2dp"
-            android:layout_marginBottom="3dp"/>
+            app:layout_constraintBottom_toTopOf="@+id/loginBtnNavHeader"
+            app:layout_constraintStart_toStartOf="parent"
+            app:srcCompat="@drawable/profiledefault" />
 
     <TextView
+            android:id="@+id/userNameNavHeader"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="0dp"
             android:paddingTop="@dimen/nav_header_vertical_spacing"
             android:text="IgorS"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            android:id="@+id/textView2"
-            app:layout_constraintStart_toEndOf="@+id/imageView"
-            android:layout_marginStart="8dp" android:layout_marginLeft="8dp"
-            app:layout_constraintTop_toTopOf="@+id/imageView"/>
+            app:layout_constraintStart_toEndOf="@+id/userImageNavHeader"
+            app:layout_constraintTop_toTopOf="@+id/userImageNavHeader"
+            tools:text="JonnyB" />
 
     <TextView
+            android:id="@+id/userEmailNavHeader"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="sreznikov_igor@hotmail.com"
-            android:id="@+id/textView"
-            app:layout_constraintStart_toEndOf="@+id/imageView"
-            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView2"/>
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="0dp"
+            android:text="jonny@devslopes.com"
+            app:layout_constraintStart_toEndOf="@+id/userImageNavHeader"
+            app:layout_constraintTop_toBottomOf="@+id/userNameNavHeader"
+            tools:text="sreznikov_igor@hotmail.com" />
+
+    <Button
+            android:id="@+id/loginBtnNavHeader"
+            android:layout_width="wrap_content"
+            android:layout_height="32dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginLeft="4dp"
+            android:background="@android:color/transparent"
+            android:onClick="loginBtnNavClicked"
+            android:text="Login"
+            android:textAlignment="center"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageButton
+            android:id="@+id/addChannelBtn"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:background="@android:color/transparent"
+            android:onClick="addChannelClicked"
+            android:padding="5dp"
+            android:scaleType="fitXY"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:srcCompat="@drawable/addchannelbutton" />
+
 
 </android.support.constraint.ConstraintLayout>
